--- a/health-hub-main/.env
+++ b/health-hub-main/.env
@@ -1,4 +1,3 @@
-
-VITE_SUPABASE_URL=https://oujiqjdofeilzrglukoa.supabase.co
-VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_RXizgv_WO0muQQSG9g3LEQ_KxUenSbJ
+VITE_SUPABASE_URL=https://bnqnefvxtzofvhghswwu.supabase.co
+VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_TLQSBHbBGnPiKbMqnh1W7g_Hot1OvKR
 VITE_API_URL=http://localhost:4000/api/v1
