--- a/health-hub-main/.env.example
+++ b/health-hub-main/.env.example
@@ -1,2 +1,3 @@
 VITE_SUPABASE_URL=YOUR_SUPABASE_URL
 VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY=YOUR_PUBLIC_KEY
+VITE_API_URL=http://localhost:4000/api/v1
