--- a/health-hub-main/backend/.env
+++ b/health-hub-main/backend/.env
@@ -5,4 +5,4 @@ JWT_ACCESS_SECRET="health-hub-access-secret-2026-change-this"
 JWT_REFRESH_SECRET="health-hub-refresh-secret-2026-change-this"
 JWT_ACCESS_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:8080,http://localhost:5173
