--- a/health-hub-main/backend/.env.example
+++ b/health-hub-main/backend/.env.example
@@ -5,4 +5,4 @@ JWT_ACCESS_SECRET=change-me-access-secret
 JWT_REFRESH_SECRET=change-me-refresh-secret
 JWT_ACCESS_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:8080,http://localhost:5173
