--- a/apps/frontend/.env
+++ b/apps/frontend/.env
@@ -1,3 +1,3 @@
 VITE_SUPABASE_URL=https://bnqnefvxtzofvhghswwu.supabase.co
 VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_TLQSBHbBGnPiKbMqnh1W7g_Hot1OvKR
-VITE_API_URL=http://localhost:4000/api/v1
+VITE_API_URL=/api/v1
